--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -10,6 +10,16 @@
     height: 100%;
   }
 
+  .overlay {
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    
+  }
+
 /* The user input container */
 .my_container{
     margin-top: auto;
