--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -1,26 +1,11 @@
-/* direction Home */
-.bg {
-    /* The image used */
-    background-image: url('http://ict-1004-project1.s3-ap-southeast-1.amazonaws.com/background4.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: 50% 60%;
-    /* Full height */
-    height: 100%;
-  }
-
-  .overlay {
-    background-color: rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    
-  }
 
 /* The user input container */
+#section_container{
+    height: 100%;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
 .my_container{
     margin-top: auto;
     margin-bottom: auto;
@@ -44,24 +29,33 @@
 .highlight{
     color: #90d4ed;
 }
+
 .container1 {
      margin: 0px;
 }
+
+.text_container{
+    width: 98%!important; 
+    
+    margin: 0px 1% 0px 1% !important; 
+}
+
 .direction_text{
+    font-size: 30px;
     margin: 0px; 
     padding: 0px;
 }
 
 .next_button{
     display: inline-block;
-    font-size: 1.2em;
+    font-size: 2em;
     width: 80%;
     box-sizing: border-box;
 }
 
 .one_btn {
     display: inline-block;
-    font-size: 1.2em;
+    font-size: 2em;
     width: 39%;
     margin-right: 1%;
     box-sizing: border-box;
@@ -69,7 +63,7 @@
 
 .two_btn {
     display: inline-block;
-    font-size: 1.2em;
+    font-size: 2em;
     width: 39%;
     margin-left: 1%;
     box-sizing: border-box;
@@ -99,10 +93,13 @@
 }
 
 .select2-selection__rendered {
-    font-size: 1.3em;
+    font-size: 2em;
   }
 
 .select2-container {
     width: 100% !important;
 }
 
+.select2-container--default .select2-results>.select2-results__options{
+    font-size:2em;
+}
