--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -7,7 +7,72 @@ and open the template in the editor.
     Created on : 16 Mar, 2020, 3:26:48 PM
     Author     : Eugene Chew
 */
+@import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
+/*.header{
+    width: 90%; margin-left: 3%; position: absolute; top:20%;
+}*/
 
-.header{
-    width: 97%; margin-left: 3%; position: absolute; top:10%;
+body{
+  margin: 0px;
+  padding: 0;
+  font-family: sans-serif;
+  background-size: cover;
+}
+.login-box{
+  width: 280px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  bottom: -5px;
+  transform: translate(-50%,-50%);
+  color: white;
+}
+.loginsuccess{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
+p{
+font-size: 20px;
+}
+.login-box h1{
+  float: left;
+  font-size: 40px;
+  border-bottom: 6px solid #4caf50;
+  margin-bottom: 50px;
+  padding: 13px 0;
+}
+.textbox{
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  margin: 8px 0;
+  border-bottom: 1px solid #4caf50;
+}
+.textbox i{
+  width: 26px;
+  float: left;
+  text-align: center;
+}
+.textbox input{
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  font-size: 18px;
+  width: 80%;
+  float: left;
+  margin: 0 10px;
+}
+.btn{
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
 }
