--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -17,6 +17,7 @@ body{
   padding: 0;
   font-family: sans-serif;
   background-size: cover;
+   
 }
 .login-box{
   width: 280px;
@@ -25,7 +26,7 @@ body{
   left: 50%;
   bottom: -5px;
   transform: translate(-50%,-50%);
-  color: white;
+ 
 }
 .loginsuccess{
   position: absolute;
@@ -34,7 +35,8 @@ body{
 }
 
 p{
-font-size: 20px;
+font-size: 7px;
+
 }
 .login-box h1{
   float: left;
@@ -75,4 +77,7 @@ font-size: 20px;
   font-size: 18px;
   cursor: pointer;
   margin: 12px 0;
+}
+p.errormessage {
+    color: red;
 }
