--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -1,4 +1,20 @@
 
+
+
+
+  #my-input-searchbox {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    font-size: 15px;
+    border-radius: 3px;
+    border: 0;
+    margin-top: 10px;
+    width: 270px;
+    height: 40px;
+    text-overflow: ellipsis;
+    padding: 0 1em;
+  }
+
+
 /* The user input container */
 #section_container{
     height: 100%;
@@ -103,3 +119,6 @@
 .select2-container--default .select2-results>.select2-results__options{
     font-size:2em;
 }
+
+
+/* For map */
