--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -43,6 +43,23 @@ html , body {
     color: white !important;
 }
 
+
+.btn-primary-location,
+.btn-primary-location:hover,
+.btn-primary-location:visited,
+.btn-primary-location:focus {
+    background-color: #7B9EB0 !important;
+    border-color: #7B9EB0 !important;
+    color: #f2f2f2 !important;
+}
+.btn-primary-location:active{
+    background-color: #7B9EB0 !important;
+    border-color: #7B9EB0 !important;
+    color: #f2f2f2 !important;
+}
+
+
+
 .navheight {
     max-height: 20% !important;
     position: relative; z-index:1;
