--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
 html , body {
-    height: 100%;
-    background-color: #141414;
+    height: 100vh;
+    background-color: #010103;
     font-family: "Quicksand" , 'Lato' , 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
-    overflow-x: hidden;
     font-size: 62.5%;
     font-size: 10px;
+    min-height: 100%;
 }
 
 /* direction Home */
@@ -15,15 +15,25 @@ html , body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-position: 50% 60%;
     /* Full height */
-    height: 100%;
+    height: 100vh !important;
+    min-height: 100%;
+
   }
 
   .overlay {
     background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
+    min-height: 100%;
     display: flex;
     
   }
@@ -61,7 +71,8 @@ html , body {
 
 
 .navheight {
-    max-height: 20% !important;
+    max-height: 25% !important;
+    padding-bottom: 3% !important;
     position: relative; z-index:1;
 }
 
@@ -137,8 +148,7 @@ html , body {
 }
 
 .nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 20px !important;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
 }
@@ -215,7 +225,7 @@ html , body {
     margin: auto;
     position: absolute;
     right: 30px;
-    top: 0;
+    top: 20px;
     bottom: 0;
 }
 
@@ -399,7 +409,7 @@ html , body {
 
 .affix {
     padding: 0;
-    background-color: #111;
+    background-color: #010102;
 }
 
 .myH2 {
