--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -17,7 +17,7 @@
 
 /* The user input container */
 #section_container{
-    height: 100%;
+    margin-top: 80px;
     width: 98%;
     margin-left: 1%;
     margin-right: 1%;
@@ -121,6 +121,24 @@
 }
 
 #starting_location {
-    margin: 5% 0px 0px 0px;
+    display:flex;
+    height:100%;
 }
 
+#searchWindow{
+    height:100%;  width:100%; margin-top: 1%;
+    min-height: 30%;
+    min-width: 30%;
+}
+
+#map1{
+    height:100%;  width:90%;
+    min-height: 30%;
+    min-width: 30%;
+    margin-left: 5%;
+}
+
+
+@media only screen and (max-width: 768px) {
+
+}
