--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -19,8 +19,20 @@ body{
     background-size: contain;
 
 }
+.card{
+
+    padding-top: 50px;
+    padding-right: 70px;
+    padding-bottom: 30px;
+    padding-left: 70px;
+    width: 390px;
+    padding: 2px 16px;
+
+}
+
 
 .login-box{
+    padding: 2px 16px;
     width: 280px;
     position: absolute;
     top: 50%;
@@ -37,7 +49,7 @@ body{
 .login-box h1{
     float: left;
     font-size: 40px;
-    border-bottom: 6px solid #4caf50;
+    border-bottom: 6px solid #32b5c7;
     margin-bottom: 50px;
     padding: 13px 0;
 }
@@ -47,7 +59,7 @@ body{
     font-size: 20px;
     padding: 8px 0;
     margin: 8px 0;
-    border-bottom: 1px solid #4caf50;
+    border-bottom: 1px solid #32b5c7;
 }
 .textbox i{
     width: 26px;
@@ -89,5 +101,5 @@ p{
 }
 #terms{
     font-size: 20px;
-    
+
 }
