--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -49,7 +49,7 @@ body{
 .login-box h1{
     float: left;
     font-size: 40px;
-    border-bottom: 6px solid #32b5c7;
+    border-bottom: 6px solid #3d6ba0;
     margin-bottom: 50px;
     padding: 13px 0;
 }
@@ -59,7 +59,7 @@ body{
     font-size: 20px;
     padding: 8px 0;
     margin: 8px 0;
-    border-bottom: 1px solid #32b5c7;
+    border-bottom: 1px solid #3d6ba0;
 }
 .textbox i{
     width: 26px;
