--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -153,7 +153,7 @@
     font-size: 18px;
   }
 
-  #final_back, #final_open , #final_copy {
+  #final_back, #final_open , #final_copy, #history_home, #history_open , #history_copy {
       margin:0.5% auto 0.5% auto;
       color:white;
   }
