--- a/resources/css/userhome.css
+++ b/resources/css/userhome.css
@@ -138,7 +138,7 @@
     margin-left: 5%;
 }
 
-.card {
+.card1 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background-color: whitesmoke;
     color: black;
