--- a/admin/main.css
+++ b/admin/main.css
@@ -11,3 +11,11 @@
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover{
     z-index: 0 !important;
 }
+
+#table_info{
+    color:white;
+}
+
+label{
+    color:white;
+}
