--- a/admin/main.css
+++ b/admin/main.css
@@ -21,3 +21,10 @@ label{
     font-size: 20px;
     color:white;
 }
+
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;    
+    color: #333;
+    background-color: #fff;
+}
